--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,19 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
     id 'kotlin-kapt'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.20' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
     namespace 'com.example.littlelemon'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.littlelemon"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -39,7 +40,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0'
+        kotlinCompilerExtensionVersion '1.5.3'
     }
     packagingOptions {
         resources {
@@ -58,12 +59,13 @@ dependencies {
     implementation 'androidx.compose.material:material:1.2.0'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
 
-    implementation 'io.ktor:ktor-client-android:2.1.3'
-    implementation "io.ktor:ktor-client-content-negotiation:2.1.3"
-    implementation "io.ktor:ktor-serialization-kotlinx-json:2.1.3"
 
-    implementation 'androidx.room:room-runtime:2.4.3'
-    kapt 'androidx.room:room-compiler:2.4.3'
+    implementation 'io.ktor:ktor-client-android:2.2.2'
+    implementation "io.ktor:ktor-client-content-negotiation:2.2.2"
+    implementation "io.ktor:ktor-serialization-kotlinx-json:2.2.2"
+
+    implementation 'androidx.room:room-runtime:2.6.0'
+    kapt 'androidx.room:room-compiler:2.6.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
